[package]
name = "subimg-search"
version = "0.3.0"
authors = ["Ivan I. Grushin <iigrushin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicli = "~0.4"
structopt = "~0.2"
image = "~0.24"
regex = "~1"
rayon = "1.5"
num_cpus = "*"
switch_statement = "*"
